# TalkProxy

./: .gitignore  black.toml  pyproject.toml  ruff.toml
src/talkProxy/: __init__.py  app.py  form.ui  hysteria_ui.py  my_proxy.pyproject  trayIcon.py  ui_build.bat  ui_form.py
src/talkProxy/core/: hysteria.py  hysteria2.py  proxyManager.py  test_core.py
src/talkProxy/log/: Logger.py
src/talkProxy/tools/: common.py  config.py  monitor.py  remote_config.py  setSystemProxy.py  settingReader.py  test_tools.py
