[project]
name = "talkProxy"
dynamic = ["version"]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pyyaml"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { file = ["version.txt"] }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
